--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -40,9 +40,9 @@
                         <span class="layui-nav-more"></span>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/user/userSet}"><i class="layui-icon" 
+                        <dd><a th:href="@{/user/userSetting}"><i class="layui-icon" 
                                     style="margin-left: 2px; font-size: 22px;">&#xe620;</i>基本设置</a></dd>
-                        <dd><a th:href="@{/user/myCenter}"><i class="layui-icon"
+                        <dd><a th:href="@{/user/userCenter}"><i class="layui-icon"
                                     style="margin-left: 2px; font-size: 22px;">&#xe68e;</i>我的主页</a></dd>
                         <hr style="margin: 5px 0;">
                         <dd><a th:href="@{/user/logout}" style="text-align: center;">退出</a></dd>
