--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,9 @@
             <div style="margin: 10px; color: black;">
                 <span class="layui-breadcrumb" lay-separator="|">
                     <a class="layui-this" href="">首页</a>
-                    <a href="">首页</a>
-                    <a href="">首页</a>
-                    <a href="">首页</a>
-                    <a href="">首页</a>
+                    <th:block th:each=" c : ${session.categorys}">
+                        <a href="" th:text="${c.categoryName}">首页</a>
+                    </th:block>
                 </span>
                 <div class="layui-layout-right">
                     <a th:href="@{/article/articlePub}"><button class="layui-btn">发布新贴</button></a>
@@ -29,26 +28,42 @@
                 <div class="layui-card">
                     <div class="layui-card-header">
                         <a href="">默认</a>
+                        <div class="layui-layout-right" style="margin-right: 10px;">
+                            <a href="">按热议</a>
+                            <span>|</span>
+                            <a href="">按时间</a>
+                        </div>
                     </div>
-                    <div class="layui-card-body">
-                        嗨嗨嗨
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">
-                        <a href="">默认</a>
-                    </div>
-                    <div class="layui-card-body">
-                        嗨嗨嗨
-                    </div>
-                </div>
-                <div class="layui-card">
-                    <div class="layui-card-header">
-                        <a href="">默认</a>
-                    </div>
-                    <div class="layui-card-body">
-                        嗨嗨嗨
-                    </div>
+                    <th:block th:if="${session.articlesByTime == null}">
+                        <div class="layui-card-body" style="height: 624px; text-align: center;">
+                            <span class="layui-font-gray">没有相关数据</span>
+                        </div>
+                    </th:block>
+                    <th:block th:unless="${session.articlesByTime == null}">
+                        <th:block th:each=" a : ${session.articlesByTime}">
+                            <div class="layui-card-body">
+                                <img class="headImg" th:src="@{${session.users[a.userId].headImgUrl}}" alt="">
+                                <div style="margin-left: 54px;">
+                                    <span th:text="${a.categoryName}" class="layui-border-green layui-btn-xs">分享</span></a>
+                                    <a href="" th:text="${a.title}">默认</a><br>
+                                    <span th:text="${session.users[a.userId].nickName}">棠槿牵樱</span>
+                                    <span th:text="${a.lastUpdateTime}">2021-08-13 13:01:11</span>
+                                    <div style="position: absolute; right: 10px; bottom: 5px;">
+                                        <i class="layui-icon layui-icon-praise layui-font-red"></i><span
+                                            th:text="${a.likes}">111</span>
+                                        <i class="layui-icon layui-icon-star-fill layui-font-orange"></i><span
+                                            th:text="${a.collects}">111</span>
+                                        <i class="layui-icon layui-icon-reply-fill"></i><span
+                                            th:text="${a.comments}">111</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                        </th:block>
+                        <div class="layui-card-body" style="text-align: center;">
+                            <div id="Claypage"></div>
+                        </div>
+                    </th:block>
                 </div>
             </div>
             <div class="layui-col-md4">
@@ -60,7 +75,8 @@
                         <form class="layui-form" action="">
                             <div class="layui-form-item">
                                 <div class="layui-input-inline">
-                                    <input placeholder="根据关键字查找" value="" name="keyword" id="keyword" class="layui-input" type="text">
+                                    <input placeholder="根据关键字查找" value="" name="keyword" id="keyword"
+                                        class="layui-input" type="text">
                                 </div>
                                 <button class="layui-btn"><i class="layui-icon layui-icon-search"></i></button>
                             </div>
