--- a/src/main/resources/templates/article/articlePub.html
+++ b/src/main/resources/templates/article/articlePub.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head th:replace="header::head-fragment('发布新帖')"></head>
+
+<head th:replace="header::head-fragment('发布新帖')"></head>
+
 <body>
     <div th:replace="header::header-fragment"></div>
     <div class="layui-container">
@@ -13,7 +15,8 @@
                             <div class="layui-col-md6">
                                 <label for="title" class="layui-form-label">文章标题</label>
                                 <div class="layui-input-block">
-                                    <input id="title" name="title" class="layui-input" type="text" required lay-verify="required">
+                                    <input id="title" name="title" class="layui-input" type="text" required
+                                        lay-verify="required">
                                 </div>
                             </div>
 
@@ -21,13 +24,10 @@
                                 <label for="category" class="layui-form-label">所属分类</label>
                                 <div class="layui-input-block">
                                     <select name="category" id="category">
-                                        <option value=""></option>
-                                        <option value="111">提问</option>
-                                        <option value="222">分享</option>
-                                        <option value="333">搞笑</option>
-                                        <option value="444">学习</option>
-                                        <option value="555">ヾ(✿ﾟ▽ﾟ)ノ</option>
-                                        <option value="666">其他</option>
+                                        <option value="0"></option>
+                                        <th:block th:each=" c : ${session.categorys}">
+                                            <option th:value="${c.id}" th:text="${c.categoryName}">提问</option>
+                                        </th:block>
                                     </select>
                                 </div>
                             </div>
@@ -56,9 +56,10 @@
                 </form>
             </div>
         </div>
-        <input th:value="${session.user.id}" id="userid" name="userid" style="visibility: hidden;" readonly class="layui-input" type="text">
+        <input th:value="${session.user.id}" id="userId" name="userId" style="visibility: hidden;" readonly
+            class="layui-input" type="text">
     </div>
-    
+
     <script th:src="@{/layui/layui.js}"></script>
     <script th:src="@{/js/public.js}"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
@@ -74,19 +75,60 @@
             editor.config.zIndex = 1
             editor.create()
 
-            window.articlePub = function(){
-                var userid = $('#userid').val()
+            window.articlePub = function () {
                 var title = $('#title').val()
-                var categoryid = $('#category').val()
+                if(isNull(title)){
+                    layer.alert('请输入标题!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    return false;
+                }
+
+                var categoryID = $('#category').find('option:selected').val()
                 var category = $('#category').find('option:selected').text()
+                if(categoryID == 0){
+                    layer.alert('请选择文章分类!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    return false;
+                }
+
                 var content = editor.txt.html()
-                console.log(userid)
-                console.log(title)
-                console.log(categoryid)
-                console.log(category)
-                console.log(content)
+
+                if(isNull(content)){
+                    layer.alert('请输入正文内容!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    return false;
+                }
+
+                var verifyCode = $('#verifyCode').val()
+                if(!validLength(verifyCode, 5)){
+                    layer.alert('请输入正确的验证码!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    return false;
+                }
+                
+                var params = {
+                    "title": title, 
+                    "categoryID": categoryID,
+                    "categoryName": category, 
+                    "content": content,
+                    "verifyCode": verifyCode
+                }
+                var url = '/article/articlePub'
+                $.ajax({
+                    type: 'POST',//方法类型
+                    url: url,
+                    data: params,
+                    success: function (result) {
+                        if (result.resultCode == 200) {
+                            window.location.href = '/'
+                        } else {
+                            layer.msg(result.message)
+                        }
+                        ;
+                    },
+                    error: function () {
+                        layer.alert('操作错误!', { title: '提醒', skin: 'layui-layer-molv', icon: 2 });
+                    }
+                });
             }
         });
     </script>
 </body>
+
 </html>
