--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,6 +8,7 @@
     <title th:text="${title}">学生网上交流论坛</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
     <link rel="stylesheet" th:href="@{/css/global.css}">
+    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">
 </head>
 
 <div th:fragment="header-fragment" class="layui-header header">
