--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -121,8 +121,8 @@
 
     <script th:src="@{/layui/layui.js}"></script>
     <script th:src="@{/js/public.js}"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/wangeditor@latest/dist/wangEditor.min.js"></script>
-    <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>
+    <script th:src="@{/js/wangEditor.min.js}"></script>
+    <script th:src="@{/js/highlight.min.js}"></script>
     <script>
         layui.use(['layer', 'form', 'element', 'laypage'], function () {
             var layer = layui.layer
